@@ -78,6 +78,7 @@ As part of the page editor redesign project sponsored by Google, we have made a 
  * Migrate the dashboard (home) view header to the shared header template and update designs (Paarth Agarwal)
  * Update classes and styles for the shared header templates to align with UI guidelines (Paarth Agarwal)
  * Clean up multiple eslint rules usage and configs to align better with the Wagtail coding guidelines (LB (Ben Johnston))
+ * Make ModelAdmin InspectView footer actions consistent with other parts of the UI (Thibaud Colas)
 
 ### Bug fixes
 
