@@ -49,7 +49,7 @@
     {% block footer %}
         {% if buttons %}
             <footer class="footer">
-                <div class="button-group footer__container">
+                <div class="footer__container">
                     {% for button in buttons %}
                         {% include "modeladmin/includes/button.html" %}
                     {% endfor %}
