@@ -483,22 +483,6 @@
 
         </section>
 
-        <section id="button-groups">
-            <h2>Button groups</h2>
-            <p>Adds rounding to first and last items only</p>
-            <div class="button-group">
-                <button class="button">button element</button>
-                <button class="button">button element</button>
-                <button class="button">button element</button>
-            </div>
-            <br/>
-            <div class="button-group">
-                <button class="button button--icon text-replace yes">{% icon name="tick" %}A proper button</button>
-                <a href="#" class="button button--icon text-replace white">{% icon name="cog" %}A link button</a>
-                <span class="button button--icon text-replace no">{% icon name="bin" %}A non-link button</span>
-            </div>
-        </section>
-
         <section id="dropdowns">
             <h2>Dropdown buttons</h2>
 
